fixed background bug on mobile

--- a/src/pages/signup/signuppage.scss
+++ b/src/pages/signup/signuppage.scss
@@ -62,7 +62,6 @@
         padding: 0;
         min-height: 100dvh;
         background-image: none;
-        background-color: rgb(var(--color-bg));
     }
     .auth-container {
         background: linear-gradient(to bottom, #a8d8ff, #003366);
